Изменена функция, выводящая текст на экран калькулятора, в связи с изменением дата класса, содержащего состояние обычного калькулятора.

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="comma_button_text">,</string>
     <string name="plus_button_text">+</string>
 
+    <string name="divide_on_zero_error_text">Деление на ноль невозможно</string>
+    <string name="unknown_error_text">Деление на ноль невозможно</string>
+
 </resources>
